@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,10 +21,11 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.gradle.api.DefaultTask;
 import org.gradle.api.Task;
+import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.OutputDirectory;
 import org.gradle.api.tasks.TaskAction;
@@ -46,6 +47,8 @@ public class DocumentPluginGoals extends DefaultTask {
 
 	private File outputDir;
 
+	private Map<String, String> goalSections;
+
 	@OutputDirectory
 	public File getOutputDir() {
 		return this.outputDir;
@@ -53,6 +56,15 @@ public class DocumentPluginGoals extends DefaultTask {
 
 	public void setOutputDir(File outputDir) {
 		this.outputDir = outputDir;
+	}
+
+	@Input
+	public Map<String, String> getGoalSections() {
+		return this.goalSections;
+	}
+
+	public void setGoalSections(Map<String, String> goalSections) {
+		this.goalSections = goalSections;
 	}
 
 	@InputFile
@@ -80,7 +92,7 @@ public class DocumentPluginGoals extends DefaultTask {
 			writer.println("| Goal | Description");
 			writer.println();
 			for (Mojo mojo : plugin.getMojos()) {
-				writer.printf("| <<goals-%s,%s:%s>>%n", mojo.getGoal(), plugin.getGoalPrefix(), mojo.getGoal());
+				writer.printf("| <<%s,%s:%s>>%n", goalSectionId(mojo), plugin.getGoalPrefix(), mojo.getGoal());
 				writer.printf("| %s%n", mojo.getDescription());
 				writer.println();
 			}
@@ -90,42 +102,49 @@ public class DocumentPluginGoals extends DefaultTask {
 
 	private void documentMojo(Plugin plugin, Mojo mojo) throws IOException {
 		try (PrintWriter writer = new PrintWriter(new FileWriter(new File(this.outputDir, mojo.getGoal() + ".adoc")))) {
-			String sectionId = "goals-" + mojo.getGoal();
+			String sectionId = goalSectionId(mojo);
 			writer.println();
 			writer.println();
 			writer.printf("[[%s]]%n", sectionId);
-			writer.printf("== `%s:%s`%n", plugin.getGoalPrefix(), mojo.getGoal());
+			writer.printf("= `%s:%s`%n", plugin.getGoalPrefix(), mojo.getGoal());
 			writer.printf("`%s:%s:%s`%n", plugin.getGroupId(), plugin.getArtifactId(), plugin.getVersion());
 			writer.println();
 			writer.println(mojo.getDescription());
-			List<Parameter> parameters = mojo.getParameters().stream().filter(Parameter::isEditable)
-					.collect(Collectors.toList());
-			List<Parameter> requiredParameters = parameters.stream().filter(Parameter::isRequired)
-					.collect(Collectors.toList());
-			String parametersSectionId = sectionId + "-parameters";
-			String detailsSectionId = parametersSectionId + "-details";
+			List<Parameter> parameters = mojo.getParameters().stream().filter(Parameter::isEditable).toList();
+			List<Parameter> requiredParameters = parameters.stream().filter(Parameter::isRequired).toList();
+			String detailsSectionId = sectionId + ".parameter-details";
 			if (!requiredParameters.isEmpty()) {
 				writer.println();
 				writer.println();
-				writer.printf("[[%s-required]]%n", parametersSectionId);
-				writer.println("=== Required parameters");
+				writer.printf("[[%s.required-parameters]]%n", sectionId);
+				writer.println("== Required parameters");
 				writeParametersTable(writer, detailsSectionId, requiredParameters);
 			}
-			List<Parameter> optionalParameters = parameters.stream().filter((parameter) -> !parameter.isRequired())
-					.collect(Collectors.toList());
+			List<Parameter> optionalParameters = parameters.stream()
+				.filter((parameter) -> !parameter.isRequired())
+				.toList();
 			if (!optionalParameters.isEmpty()) {
 				writer.println();
 				writer.println();
-				writer.printf("[[%s-optional]]%n", parametersSectionId);
-				writer.println("=== Optional parameters");
+				writer.printf("[[%s.optional-parameters]]%n", sectionId);
+				writer.println("== Optional parameters");
 				writeParametersTable(writer, detailsSectionId, optionalParameters);
 			}
 			writer.println();
 			writer.println();
 			writer.printf("[[%s]]%n", detailsSectionId);
-			writer.println("=== Parameter details");
+			writer.println("== Parameter details");
 			writeParameterDetails(writer, parameters, detailsSectionId);
 		}
+	}
+
+	private String goalSectionId(Mojo mojo) {
+		String goalSection = this.goalSections.get(mojo.getGoal());
+		if (goalSection == null) {
+			throw new IllegalStateException("Goal '" + mojo.getGoal() + "' has not be assigned to a section");
+		}
+		String sectionId = goalSection + "." + mojo.getGoal() + "-goal";
+		return sectionId;
 	}
 
 	private void writeParametersTable(PrintWriter writer, String detailsSectionId, List<Parameter> parameters) {
@@ -135,12 +154,8 @@ public class DocumentPluginGoals extends DefaultTask {
 		writer.println();
 		for (Parameter parameter : parameters) {
 			String name = parameter.getName();
-			writer.printf("| <<%s-%s,%s>>%n", detailsSectionId, name, name);
-			String type = parameter.getType();
-			if (type.lastIndexOf('.') >= 0) {
-				type = type.substring(type.lastIndexOf('.') + 1);
-			}
-			writer.printf("| `%s`%n", type);
+			writer.printf("| <<%s.%s,%s>>%n", detailsSectionId, parameterId(name), name);
+			writer.printf("| `%s`%n", typeNameToJavadocLink(shortTypeName(parameter.getType()), parameter.getType()));
 			String defaultValue = parameter.getDefaultValue();
 			if (defaultValue != null) {
 				writer.printf("| `%s`%n", defaultValue);
@@ -158,20 +173,34 @@ public class DocumentPluginGoals extends DefaultTask {
 			String name = parameter.getName();
 			writer.println();
 			writer.println();
-			writer.printf("[[%s-%s]]%n", sectionId, name);
-			writer.printf("==== `%s`%n", name);
+			writer.printf("[[%s.%s]]%n", sectionId, parameterId(name));
+			writer.printf("=== `%s`%n", name);
 			writer.println(parameter.getDescription());
 			writer.println();
 			writer.println("[cols=\"10h,90\"]");
 			writer.println("|===");
 			writer.println();
 			writeDetail(writer, "Name", name);
-			writeDetail(writer, "Type", parameter.getType());
+			writeDetail(writer, "Type", typeNameToJavadocLink(parameter.getType()));
 			writeOptionalDetail(writer, "Default value", parameter.getDefaultValue());
 			writeOptionalDetail(writer, "User property", parameter.getUserProperty());
 			writeOptionalDetail(writer, "Since", parameter.getSince());
 			writer.println("|===");
 		}
+	}
+
+	private String parameterId(String name) {
+		StringBuilder id = new StringBuilder(name.length() + 4);
+		for (char c : name.toCharArray()) {
+			if (Character.isLowerCase(c)) {
+				id.append(c);
+			}
+			else {
+				id.append("-");
+				id.append(Character.toLowerCase(c));
+			}
+		}
+		return id.toString();
 	}
 
 	private void writeDetail(PrintWriter writer, String name, String value) {
@@ -189,6 +218,34 @@ public class DocumentPluginGoals extends DefaultTask {
 			writer.println("|");
 		}
 		writer.println();
+	}
+
+	private String shortTypeName(String name) {
+		if (name.lastIndexOf('.') >= 0) {
+			name = name.substring(name.lastIndexOf('.') + 1);
+		}
+		if (name.lastIndexOf('$') >= 0) {
+			name = name.substring(name.lastIndexOf('$') + 1);
+		}
+		return name;
+	}
+
+	private String typeNameToJavadocLink(String name) {
+		return typeNameToJavadocLink(name, name);
+	}
+
+	private String typeNameToJavadocLink(String shortName, String name) {
+		if (name.startsWith("org.springframework.boot.maven")) {
+			return "{spring-boot-docs}/maven-plugin/api/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
+		}
+		if (name.startsWith("org.springframework.boot")) {
+			return "{spring-boot-docs}/api/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
+		}
+		return shortName;
+	}
+
+	private String typeNameToJavadocPath(String name) {
+		return name.replace(".", "/").replace("$", ".");
 	}
 
 }
